force-app/main/default/objects/Live_COI__c/Live_COI__c.object-meta.xml
<CustomObject>
    <description>A digital version of a Certificate of Insurance</description>
    <label>Live COI</label>
    <nameField>
        <displayFormat>LiveCOI-{0000000}</displayFormat>
        <label>Live COI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live COIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>