force-app/main/default/objects/Live_COI__c/fields/Bunker_COI_Id__c.field-meta.xml
<CustomField>
    <fullName>Bunker_COI_Id__c</fullName>
    <description>Id of the Live COI in the bunker database</description>
    <label>Bunker COI Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>