force-app/main/default/objects/Live_COI__c/fields/Contractor_Account__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Live COIs</relationshipLabel>
    <relationshipName>Live_COIs</relationshipName>
    <type>Lookup</type>
</CustomField>