force-app/main/default/objects/Live_COI__c/fields/Member_Account__c.field-meta.xml
<CustomField>
    <fullName>Member_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Live COIs (Member Account)</relationshipLabel>
    <relationshipName>Live_COIs1</relationshipName>
    <type>Lookup</type>
</CustomField>