force-app/main/default/objects/Live_COI__c/fields/Member_Lead__c.field-meta.xml
<CustomField>
    <fullName>Member_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Live COIs</relationshipLabel>
    <relationshipName>Live_COIs</relationshipName>
    <type>Lookup</type>
</CustomField>