force-app/main/default/objects/Live_COI__c/fields/Views__c.field-meta.xml
<CustomField>
    <fullName>Views__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>